fix horizontal scroll

--- a/styles.css
+++ b/styles.css
@@ -13,9 +13,6 @@ body {
     background: linear-gradient(90deg, #9883e5 0%, #e5e5e5 100%);
     color: whitesmoke;
     margin: 0;
-    /* display: flex;
-    flex-direction: column;
-    align-items: center; */
     width: 100%;
     height: 100vh;
 }
@@ -23,13 +20,9 @@ body {
 content {
     display: flex;
     flex-direction: column;
-    /* justify-content: center; */
     justify-content: flex-start;
     align-items: center;
-    /* min-height: 80vh; */
     height: auto;
-    width: 100vw;
-    /* background-color: red; */
 }
 
 header {
@@ -39,7 +32,6 @@ header {
     align-items: center;
     width: 100%;
     height: 10vh;
-    /* background-color: yellow; */
 }
 
 footer {
@@ -47,7 +39,6 @@ footer {
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    /* padding: 1em; */
     background: #286570;
     width: 100%;
     height: 10vh;
@@ -93,10 +84,8 @@ footer > p > a:hover {
 
 .home {
     height: 80vh;
-    /* background-color: red; */
     flex-direction: row;
     justify-content: center;
-    /* justify-content: flex-end; */
     align-items: center;
 }
 
@@ -124,11 +113,8 @@ footer > p > a:hover {
 .experience div {
     display: grid;
     grid-template-columns: 2fr 1fr;
-    /* grid-template-rows: 1fr 1fr; */
-    /* background-color: red; */
     max-width: 800px;
     margin: 1em;
-    /* Space between child elements */
     grid-column-gap: 1em;
     grid-row-gap: 1em;
 }
@@ -183,7 +169,6 @@ footer > p > a:hover {
     display: flex;
     flex-direction: row;
     border: 1px solid #9883e5;
-    /* border: 1px solid red; */
     border-radius: 10px;
     margin: 1em;
     max-width: 800px;
@@ -224,7 +209,6 @@ footer > p > a:hover {
     grid-column-gap: 1em;
     grid-row-gap: 1em;
     margin: 4em;
-    /* background-color: red; */
     max-width: 100%;
 }
 
@@ -242,11 +226,6 @@ footer > p > a:hover {
 }
 
 /* CSS for Contact page */
-
-.contact {
-    min-height: 80vh;
-    /* background-image: url("images/me_phone.jpg"); */
-}
 
 .contact .grid {
     display: grid;
@@ -271,7 +250,3 @@ footer > p > a:hover {
     text-decoration: none;
     font-weight: bold;
 }
-
-/* #9883E5
-    #286570
-    #D5CABD */
